[fix]3カラム版
3カラム版にマージ (+2 squashed commits)
Squashed commits:
[3925625] [change]
[f9ee804] [change]

--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,6 @@ p {
 	padding:30px 0;
 }
 
-<<<<<<< HEAD
-.column-1 {
-	width:100%;
-	padding:20px;
-=======
 .column-3__box {
 	width: 100%;
 	display: flex;
@@ -91,7 +86,6 @@ p {
 .column-3 {
 	width:30%;
 	padding: 20px;
->>>>>>> master
 	background-color:#f5f5f5;
 }
 
